# P2P_Chat_System

./: .coverage  Dockerfile  README.md  client.py  discovery_server.py  docker-compose.yml  dump.rdb  pyproject.toml
.github/workflows/: main.yml
p2pchat/: client.py  discovery_server.py
p2pchat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_utils.py
