[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "p2pchat"
version = "0.1.0"
description = "A peer-to-peer async chat system with Redis-based messaging"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Ansh Singh", email = "your@email.com" }]
dependencies = [
    "cryptography",
    "redis"
]

[project.scripts]
p2p-chat-client = "p2pchat.client:main"
p2p-discovery-server = "p2pchat.discovery_server:main"
